welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: not found: value j
  do {avance();setCouleurBrosse(T(T.length-i+j));baisseBrosse();leveBrosse()} while (estFaceMur==false);
                                             ^