welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {

var T = new Array[Color](getMondeHauteur())
for (i <- 1 to T.length-1){
   T(i)=getCouleurSol();
   avance();
}
T(T.length-1)=getCouleurSol()
for (i <- 1 to getMondeHauteur-1){recule()}
for (i <- 1 to getMondeLargeur-1){
  gauche();
  avance();
  droite();
  do {avance();setCouleurBrosse(T(T.length-i+j));baisseBrosse();leveBrosse()} while (estFaceMur==false);
  do {recule()} while(!estDosMur())
  for (k <- 1 to i){avance()};
  for (l <- 1 to i){recule()};
}
}